--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ public_html/hot
 
 storage/*.key
 .env
-.env/*
 Homestead.yaml
 Homestead.json
 /.vagrant
@@ -30,4 +29,5 @@ Homestead.json
 .phpactor.json
 auth.json
 
-docker/mysql/data//src/.env.testing
+docker/mysql/data/
+src/.env.testing
